crates/toride-mise/tests/snapshots/snapshots__command_spec_env.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 99
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "env",
        "--json",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: true,
    output_limit: None,
}
