crates/toride-mise/tests/snapshots/snapshots__command_spec_env_with_tool.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 105
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "env",
        "--json",
        "node@22",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: true,
    output_limit: None,
}
