crates/toride-mise/tests/snapshots/snapshots__command_spec_ls_remote.snap
---
source: crates/toride-mise/tests/snapshots.rs
assertion_line: 81
expression: spec
---
CommandSpec {
    program: "mise",
    args: [
        "ls-remote",
        "node",
        "--output=json",
    ],
    stdin: None,
    stdin_null: false,
    timeout: None,
    env: [],
    env_remove: [],
    clear_env: false,
    cwd: None,
    output_mode: Capture,
    redact: false,
    output_limit: None,
}
